--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Flavors&family=Fredoka+One|Lobster|Heebo|Butterfly+Kids&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Flavors&family=Fredoka+One&family=Lobster&family=Ranchers|Comfortaa|Permanent+Marker|Heebo|Butterfly+Kids&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
